更新 Slamming 相关工作

--- a/Models/SpeechLM/2025.02.19_Slamming.md
+++ b/Models/SpeechLM/2025.02.19_Slamming.md
@@ -156,15 +156,15 @@ We open-source all code, models, training recipes, and synthetic datasets.
 
 <table><tr><td width="50%">
 
-**Efficient training.**
+**Efficient Training**
 
 Enhancing the efficiency of neural network training has been extensively studied (**Survey by Shen et al (2023)**[^shen2023efficient]).
-[^hajimolahoseini2023swiftlearn], [^wang2024greats] examined the impact of data selection on LLM training and introduced efficient data selection methods.
-[^muhamed2024grass] proposed using structured sparse gradients to enhance compute efficiency in LLM training, while [^rawat2024little] explored the potential of leveraging smaller language models to improve the training efficiency of larger LLMs.
-[^lv2024scalable] investigated the use of low-dimensional projections for attention parameters to enhance training efficiency.
-Meanwhile, [^neiterman2024layerdropback] proposed applying LayerDrop as a technique to optimize neural network training.
+- **SwiftLearn**[^hajimolahoseini2023swiftlearn], **GREATS**[^wang2024greats] examined the impact of data selection on LLM training and introduced efficient data selection methods.
+- **GRASS**[^muhamed2024grass] proposed using structured sparse gradients to enhance compute efficiency in LLM training, while **SALT**[^rawat2024little] explored the potential of leveraging smaller language models to improve the training efficiency of larger LLMs.
+- **LPA**[^lv2024scalable] investigated the use of low-dimensional projections for attention parameters to enhance training efficiency.
+Meanwhile, **LDB**[^neiterman2024layerdropback] proposed applying LayerDrop as a technique to optimize neural network training.
 
-More closely related to our work, [^li2023flm] propose a training strategy for developing LLMs within a $100k\$$ budget.
+More closely related to our work, **FLM-101B**[^li2023flm] propose a training strategy for developing LLMs within a $100k\$$ budget.
 **ModernBERT**[^warner2024modernbert], an efficient training pipeline for optimising BERT models, while [^izsak2021train] outline a method for training a BERT model in $24$ hours using $8$ GPUs.
 The most relevant work to ours is **Cramming**[^geiping2023cramming], where the authors conduct an in-depth analysis of masked LM training on a single GPU in one day.
 
@@ -174,23 +174,53 @@ In this work, we address this gap by focusing on efficient SLM training.
 
 </td><td>
 
+**高效训练**
+
+增强神经网络训练的效率已经得到了广泛研究 (**Survey by Shen et al (2023)**[^shen2023efficient]).
+- **SwiftLearn**[^hajimolahoseini2023swiftlearn], **GREATS**[^wang2024greats] 研究了数据选择对 LLM 训练的影响, 并提出了高效的数据选择方法.
+- **GRASS**[^muhamed2024grass] 提出了使用结构稀疏梯度来提高 LLM 训练的计算效率, 而 **SALT**[^rawat2024little] 探索了利用较小的语言模型来提高较大 LLM 的训练效率.
+- **LPA**[^lv2024scalable] 研究了为注意力参数使用低维投影来增强训练效率.
+与此同时, **LDB**[^neiterman2024layerdropback] 提出了将 LayerDrop 作为一种技术来优化神经网络训练.
+
+和我们的工作更相关的研究是 **FLM-101B**[^li2023flm], 提出了一种训练策略, 用于在 $100k\$$ 预算内开发 LLM.
+- **ModernBERT**[^warner2024modernbert], 一种高效的 BERT 训练流程, 虽然 [^izsak2021train] 提出了一种方法, 用于在 $24$ 小时内使用 $8$ 块 GPU 训练 BERT 模型.
+- 和我们工作最相关的是 **Cramming**[^geiping2023cramming], 作者对掩码语言模型训练进行了深入分析, 并在一天内使用单块 GPU 训练掩码语言模型.
+
+虽然这些研究提供了宝贵的见解, 但它们主要关注于训练文本模型, 如 LLM 和掩码语言模型.
+在语音领域, 与自监督表示模型相关的研究已经有了 [^liu2024efficient], 但没有 SLM.
+在本项工作中, 我们着重于 SLM 训练的高效训练.
+
 </td></tr>
 <tr><td>
 
-**Generative speech language models** were explored under various setups[^gslm], [^kharitonov2021text].
-[^gslm] were the first to show how raw and uncurated speech data can be leveraged into building a GSLM system.
-Next,[^borsos2023audiolm] proposed a cascade version using both coarse and fine speech tokens.
-Such a modelling framework opened up a new and promising research direction for processing and modelling spoken data, such as speech resynthesis[^polyak2021speech], speaking style conversion[^kreuk2021textless], [^maimon2023dissc], dialogue modelling[^nguyen2022generative], speech-to-speech translation[^popuri2022enhanced], [^peng2024mslm], etc.
+**Generative speech language models** were explored under various setups (**GSLM**[^gslm], **pGSLM**[^kharitonov2021text]).
+**GSLM**[^gslm] were the first to show how raw and uncurated speech data can be leveraged into building a GSLM system.
+Next, **AudioLM**[^borsos2023audiolm] proposed a cascade version using both coarse and fine speech tokens.
+Such a modelling framework opened up a new and promising research direction for processing and modelling spoken data, such as speech resynthesis[^polyak2021speech], speaking style conversion([^kreuk2021textless], **DISSC**[^maimon2023dissc]), dialogue modelling (**dGSLM**[^nguyen2022generative]), speech-to-speech translation ([^popuri2022enhanced], **MSLM-S2ST**[^peng2024mslm]), etc.
 
-[^nachmani2023spoken] proposed augmenting a text LM with continuous speech data to improve spoken question-answering tasks.
-Recently, [^park2024long] proposed SLM based on state-space models[^gu2021efficiently] to further push long context-efficient modelling, while [^lin2024alignslm] proposed to fine-tune SLMs using **Direct Preference Optimization**[^rafailov2024dpo] obtained from text LLM rankings.
+**Spectron**[^nachmani2023spoken] proposed augmenting a text LM with continuous speech data to improve spoken question-answering tasks.
+Recently, **SpeechSSM**[^park2024long] proposed SLM based on state-space models **S4**[^gu2021efficiently] to further push long context-efficient modelling, while **Align-SLM**[^lin2024alignslm] proposed to fine-tune SLMs using **Direct Preference Optimization**[^rafailov2024dpo] obtained from text LLM rankings.
 
 Similar to text LLMs, training SLMs often demands large-scale datasets.
-For instance, **Moshi**[^defossez2024moshi] was trained on $7$ million hours of speech data, **SpiRit-LM**[^spiritlm] utilized $560k$ hours, and **TWIST**[^twist] was trained on approximately $150k$.
+For instance, **Moshi**[^defossez2024moshi] was trained on 7 million hours of speech data, **SpiRit-LM**[^spiritlm] utilized $560k$ hours, and **TWIST**[^twist] was trained on approximately $150k$.
 Recently, [^cuervo2024scaling] introduced the first scaling laws for SLMs, suggesting that achieving comparable performance to text LMs requires three times more tokens.
 In this work, we focus on reducing the computational demands while maintaining performance comparable to leading SLMs.
 
 </td><td>
+
+**生成式语音语言模型** 已经探索了不同的设置 (**GSLM**[^gslm], **pGSLM**[^kharitonov2021text]).
+- **GSLM**[^gslm] 首次表明了如何利用原始和未经整理的语音数据来构建 GSLM 系统.
+- **AudioLM**[^borsos2023audiolm] 提出了一种级联版本, 使用粗粒度和细粒度语音 Token.
+这种建模框架为处理和建模口语数据打开了一个新的和有前途的研究方向, 如语音重合成[^polyak2021speech], 说话风格转换[^kreuk2021textless], 对话建模 (**dGSLM**[^nguyen2022generative]), 语音到语音翻译 ([^popuri2022enhanced], **MSLM-S2ST**[^peng2024mslm]), 等等.
+- **Spectron**[^nachmani2023spoken] 提出了用连续语音数据增强文本 LM 来改善口语问答任务.
+- 最近, **SpeechSSM**[^park2024long] 提出了基于状态空间模型 **S4**[^gu2021efficiently] 的 SLM, 进一步推动了长上下文有效建模,
+- **Align-SLM**[^lin2024alignslm] 提出了利用从文本 LLM 排序获得的**直接偏好优化**[^rafailov2024dpo] 来微调 SLM.
+
+类似于文本大语言模型, 训练语音语言模型通常需要大规模数据集.
+- **Moshi**[^defossez2024moshi] 训练了 7 百万小时的语音数据, **SpiRit-LM**[^spiritlm] 使用了 560K 小时, 而 **TWIST**[^twist] 训练了约 150K.
+- 最近, [^cuervo2024scaling] 提出了第一个 SLM 尺度定律, 表明获得与文本 LM 相当的性能需要三倍的 Token.
+
+在本工作中, 我们聚焦于减少计算需求同时保持与领先 SLM 相当的性能.
 
 </td></tr></table>
 
@@ -200,7 +230,7 @@ In this work, we focus on reducing the computational demands while maintaining p
 
 In this study, we explore decoder-only generative SLMs, which aim at maximizing the likelihood of speech samples represented as discrete tokens.
 We examine both purely speech-based SLMs trained on speech tokens and joint speech-text SLMs using interleaving strategies (**SpiRit-LM**[^spiritlm]).
-Similarly to **TWIST**[^twist], [^gslm], we obtain speech tokens by quantizing continuous latent representations of a self-supervised speech representation model using the k-means algorithm, often known as \emph{semantic tokens}.
+Similarly to **TWIST**[^twist], **GSLM**[^gslm], we obtain speech tokens by quantizing continuous latent representations of a self-supervised speech representation model using the k-means algorithm, often known as \emph{semantic tokens}.
 Specifically, we utilize a multilingual HuBERT[^hubert] model running at $25$ Hz, as employed in **TWIST**[^twist].
 We then train SLMs by minimizing the negative log-likelihood of the input segments.
 
@@ -230,11 +260,11 @@ In \ssc, the distractor suffix is taken from the original textual StoryCloze dat
 In \tsc, however, the distractor suffix is drawn from a different topic, enabling us to evaluate the model’s ability to understand the overall semantic concept.
 
 Finally, to assess the generative abilities of SLMs, we compute \emph{generative perplexity} (GenPPL).
-Following the approach of [^gslm], **TWIST**[^twist], we provide the SLM with a short speech prompt and generate speech tokens continuation.
+Following the approach of **GSLM**[^gslm], **TWIST**[^twist], we provide the SLM with a short speech prompt and generate speech tokens continuation.
 We use unit-vocoder with duration prediction to convert the tokens into speech[^polyak2021speech], **TWIST**[^twist].
 The generated speech is then transcribed, and its PPL is evaluated using a pre-trained text LLM.
-To minimize the impact of token repetition on PPL measurements, we ground the generated text using diversity metrics derived from the auto-BLEU score[^gslm].
-Similarly to [^lin2024alignslm] we use bigram auto-BLEU.
+To minimize the impact of token repetition on PPL measurements, we ground the generated text using diversity metrics derived from the auto-BLEU score(**GSLM**[^gslm]).
+Similarly to **Align-SLM**[^lin2024alignslm] we use bigram auto-BLEU.
 In other words, we ensure that all models achieve similar auto-BLEU scores, allowing for a fair comparison of PPL.
 Specifically, we transcribe speech segments using Whisper-large-v$3$-turbo model[^radford2023robust] and measure PPL using Llama-$3.2$-$1$B model[^grattafiori2024llama3herdmodels].
 
@@ -246,8 +276,8 @@ Specifically, we transcribe speech segments using Whisper-large-v$3$-turbo model
 **Software efficiency.**
 
 To maximize performance within $24$ hours of model training, we leverage multiple efficient implementations.
-Through extensive performance testing, we found that using bfloat$16$ [^kalamkar2019study] alongside FlashAttention$2$ [^dao2023flashattention2fasterattentionbetter] and data packing provided the most efficient compute performance in our setup.
-We also experimented with model compilation using \texttt{torch.compile} [^ansel2024pytorch], but it lacked native compatibility with FlashAttention$2$ at the time of our study, and its performance without FlashAttention$2$ was subpar.
+Through extensive performance testing, we found that using bfloat$16$ [^kalamkar2019study] alongside FlashAttention2 [^dao2023flashattention2fasterattentionbetter] and data packing provided the most efficient compute performance in our setup.
+We also experimented with model compilation using \texttt{torch.compile} [^ansel2024pytorch], but it lacked native compatibility with FlashAttention2 at the time of our study, and its performance without FlashAttention2 was subpar.
 Future work could investigate this further with more efficient attention implementations[^FA3], [^li2024flexattention].
 
 To enable rapid and scalable experimentation, we developed a specialized library for SLM training that supports various model architectures, training objectives, and evaluation metrics.
@@ -315,7 +345,7 @@ In Figure~\ref{fig:model_choice}, we compare the results under the pre-defined c
 We use the text LM original names for clarity, but note that the actual size will be notably smaller due to reduced vocabulary size, e.g Qwen$2.5$-$0.5$B has $358$M parameters.
 Full model sizes can be found in Appendix \ref{sec:model_sizes}.
 
-We note that the best model sizes for both **MobileLLM**[^mobilellm], SmolLM$2$ [^smollm2] and Pythia [^pythia] are $\sim300M$ parameters, while for OPT the best is $125$M.
+We note that the best model sizes for both **MobileLLM**[^mobilellm], SmolLM2 [^smollm2] and Pythia [^pythia] are $\sim300M$ parameters, while for OPT the best is $125$M.
 According to [^cuervo2024scaling], the estimated optimal model size is approximately $66$M parameters.
 However, the best-performing model, Qwen$2.5$, is significantly larger.
 Since there are no smaller models in this family, it is difficult to determine whether this deviation is due to the quality of the initialisation or other factors.
@@ -408,7 +438,7 @@ We hypothesise this is due to the models struggling in modelling rich and comple
 Recent studies have highlighted the potential of synthetic data generated through TTS [^cuervo2024scaling] or direct text-to-unit conversion [^scaling_interleaving].
 Hence, we examine the impact of including synthetically generated speech within our constrained compute setup.
 To do so, we synthesised the TinyStories dataset [^tinystories] using a single-speaker TTS model [^wang2021fairseq], as it is computationally efficient.
-Additionally, prior research has shown that HuBERT units largely remove speaker information [^maimon2023dissc].
+Additionally, prior research has shown that HuBERT units largely remove speaker information (**DISSC**[^maimon2023dissc]).
 TinyStories has been demonstrated to enhance text LM performance and improve SLMs[^cuervo2024scaling].
 Results are presented in Table~\ref{tab:data_analysis}.
 Results indicate that incorporating such synthetic data into the training data-mix significantly boosts both modelling and generative performance metrics, across all evaluated setups.
@@ -445,7 +475,7 @@ We leave for future work to find the minimal compute budget to benefit from text
 
 <table><tr><td width="50%">
 
-Preference optimization methods have been shown to enhance the performance of text LLMs [^ouyang2022training] and, more recently, SLMs [^lin2024alignslm].
+Preference optimization methods have been shown to enhance the performance of text LLMs [^ouyang2022training] and, more recently, SLMs (**Align-SLM**[^lin2024alignslm]).
 With preference optimization, we aim to train our model to generate outputs that better align with a specified reward function or preference set.
 
 We evaluate how preference optimization affects SLM performance while considering our constrained computational budget.
@@ -478,11 +508,11 @@ Thus we stick to $30$ minutes out of $24$  hours for DPO, using the rest for pre
 
 Building on these empirical findings, we develop the final ***Slam*** recipe.
 Using it, we train SLMs based on Qwen$2.5$-$0.5$B.
-We then compare ***Slam*** to the TWIST model family across various sizes: $350$M, $1.3$B, $7$B, and $13$B.
+We then compare ***Slam*** to the TWIST model family across various sizes: $350$M, 1.3B, 7B, and 13B.
 We also present results for TWIST-$350$M using our computational constraints but following TWIST's original training recipe, along with our synthetic data.
 Finally, we report results for the top-performing model from [^cuervo2024scaling], including their predicted optimal performance under our compute budget based on SLM scaling laws.
 Results are reported in Table~\ref{tab:slam}.
-The results indicate that ***Slam*** delivers performance that is either superior or on par with baseline models while requiring significantly fewer computational resources (e.g., a single A$5000$ for a day compared to $160$ days on a V$100$).
+The results indicate that ***Slam*** delivers performance that is either superior or on par with baseline models while requiring significantly fewer computational resources (e.g., a single A5000 for a day compared to 160 days on a V100).
 
 </td><td>
 
@@ -493,11 +523,11 @@ The results indicate that ***Slam*** delivers performance that is either superio
 <table><tr><td width="50%">
 
 Similarly to **Cramming**[^geiping2023cramming], we analyse whether the proposed approach holds well also in increased compute budget.
-We opt for 48 hours on $2$ A$100$ GPUs as a reasonable academic budget for larger scale tests, and represents $\sim10$ times more compute than the ***Slamming*** setting.
-We use exactly the same ***Slam*** recipe for more steps, and increase the batch size times $2$.
+We opt for 48 hours on 2 A100 GPUs as a reasonable academic budget for larger scale tests, and represents $\sim10$ times more compute than the ***Slamming*** setting.
+We use exactly the same ***Slam*** recipe for more steps, and increase the batch size times 2.
 We provide the full results in Table \ref{tab:scaling}.
 We note that the performance continues to improve across all metrics, also outperforming methods which have far larger compute scales.
-We note that DPO training on synthetic data for $2$ epochs, notably boosts performance.
+We note that DPO training on synthetic data for 2 epochs, notably boosts performance.
 
 </td><td>
 
@@ -536,50 +566,50 @@ We hope that these insights, and open source resources will be of use to the res
 [^fang2024llama]:
 [^geiping2023cramming]: [**Cramming**: Training a Language Model on a Single GPU in One Day.](../TextLM/2022.12.28_Cramming.md) ArXiv:2212.14034/ICML2023.
 [^grattafiori2024llama3herdmodels]:
-[^gslm]:
-[^gu2021efficiently]:
-[^hajimolahoseini2023swiftlearn]:
+[^gslm]: [**GSLM**: On Generative Spoken Language Modeling from Raw Audio.](2021.02.01_GSLM.md) ArXiv:2102.01192/TACL2021.
+[^gu2021efficiently]: **S4**: Efficiently Modeling Long Sequences with Structured State Spaces. ArXiv:2111.00396.
+[^hajimolahoseini2023swiftlearn]: **SwiftLearn**: A Data-Efficient Training Method of Deep Learning Models Using Importance Sampling. ArXiv:2311.15134.
 [^hoffmann2022training]:
 [^hubert]:
-[^izsak2021train]:
+[^izsak2021train]: How to Train BERT with an Academic Budget. ArXiv:2104.07705.
 [^ji2024wavchat]: [**Survey by Ji et al (2024)**: **WavChat**: A Survey of Spoken Dialogue Models.](../../Surveys/2024.11.15_WavChat_60P/Main.md) ArXiv:2411.13577.
 [^kalamkar2019study]:
-[^kharitonov2021text]:
+[^kharitonov2021text]: **pGSLM**: Text-Free Prosody-Aware Generative Spoken Language Modeling. ArXiv:2109.03264.
 [^kokoro]:
-[^kreuk2021textless]:
+[^kreuk2021textless]: Textless Speech Emotion Conversion using Discrete and Decomposed Representations. ArXiv:2111.07402/EMNLP2022.
 [^latif2023sparks]: [**Survey by Latif et al (2023)**: Sparks of Large Audio Models: A Survey and Outlook.](../../Surveys/2023.08.24__Survey__Sparks_of_Large_Audio_Models_(32P).md) ArXiv:2308.12792.
-[^li2023flm]:
+[^li2023flm]: **FLM-101B**: An Open LLM and How to Train It with $100K Budget. ArXiv:2309.03852.
 [^li2024flexattention]:
-[^lin2024alignslm]:
-[^liu2024efficient]:
+[^lin2024alignslm]: [**Align-SLM**: Textless Spoken Language Models with Reinforcement Learning from AI Feedback.](2024.11.04_Align-SLM.md) ArXiv:2411.01834.
+[^liu2024efficient]: Efficient Training of Self-Supervised Speech Foundation Models on a Compute Budget. ArXiv:2409.16295/SLT2024.
 [^ll]:
 [^loshchilov2016sgdr]:
 [^loshchilov2017decoupled]:
 [^ls]:
 [^lv2023adalomo]:
-[^lv2024scalable]:
-[^maimon2023dissc]:
+[^lv2024scalable]: **LPA**: Scalable Efficient Training of Large Language Models with Low-dimensional Projected Attention. ArXiv:2411.02063.
+[^maimon2023dissc]: **DISSC**: Speaking Style Conversion in the Waveform Domain Using Discrete Self-Supervised Units. ArXiv:2212.09730/EMNLP2023.
 [^mobilellm]: [**MobileLLM**: Optimizing Sub-billion Parameter Language Models for On-Device Use Cases.](../TextLM/2024.02.22_MobileLLM.md) ArXiv:2402.14905/ICML2024.
 [^mostafazadeh2016corpus]:
-[^muhamed2024grass]:
-[^nachmani2023spoken]:
-[^neiterman2024layerdropback]:
-[^nguyen2022generative]:
+[^muhamed2024grass]: **GRASS**: Compute Efficient Low-Memory LLM Training with Structured Sparse Gradients. ArXiv:2406.17660.
+[^nachmani2023spoken]: [**Spectron**: Spoken Question Answering and Speech Continuation Using Spectrogram-Powered LLM.](../SpokenDialogue/2023.05.24_Spectron.md) ArXiv:2305.15255/ICLR2024.
+[^neiterman2024layerdropback]: **LDB**: LayerDropBack: A Universally Applicable Approach for Accelerating Training of Deep Networks. ArXiv:2412.18027.
+[^nguyen2022generative]: [**dGSLM**: Generative Spoken Dialogue Language Modeling.](../SpokenDialogue/2022.03.30_dGSLM.md) ArXiv:2203.16502.
 [^ouyang2022training]:
 [^pagliardini2024ademamix]:
-[^park2024long]:
-[^peng2024mslm]:
+[^park2024long]: [**SpeechSSM**: Long-Form Speech Generation with Spoken Language Models.](2024.12.24_SpeechSSM.md) ArXiv:2412.18603.
+[^peng2024mslm]: **MSLM-S2ST**: A Multitask Speech Language Model for Textless Speech-to-Speech Translation with Speaker Style Preservation. ArXiv:2403.12408.
 [^peng2024survey]: [**Survey by Peng et al (2024)**: A Survey on Speech Large Language Models.](../../Surveys/2024.10.24__Survey__A_Survey_on_Speech_Large_Language_Models_(17P).md) ArXiv:2410.18908.
 [^people]:
-[^polyak2021speech]:
-[^popuri2022enhanced]:
+[^polyak2021speech]: [Speech Resynthesis from Discrete Disentangled Self-Supervised Representations.](../SpeechCodec/2021.04.01_Speech_Resynthesis_from_Discrete_Disentangled_Self-Supervised_Representations.md) ArXiv:2104.00355.
+[^popuri2022enhanced]: Enhanced Direct Speech-to-Speech Translation Using Self-supervised Pre-training and Data Augmentation. ArXiv:2204.02967.
 [^pythia]:
 [^qwen2]:
 [^qwen_audio]: [**Qwen-Audio**: Advancing Universal Audio Understanding via Unified Large-Scale Audio-Language Models.](ST2T/2023.11.14_Qwen-Audio.md) ArXiv:2311.07919.
 [^radford2023robust]:
 [^rae2021scaling]:
-[^rafailov2024dpo]:
-[^rawat2024little]:
+[^rafailov2024dpo]: [**DPO**： Direct Preference Optimization: Your Language Model is Secretly a Reward Model.](../../Modules/RLHF/2023.05.29_DPO.md) ArXiv:2305.18290/NeurIPS2024.
+[^rawat2024little]: **SALT**: A Little Help Goes a Long Way: Efficient LLM Training by Leveraging Small LMs. ArXiv:2410.18779.
 [^roziere2023code]:
 [^salmonn]: [**SALMONN**: Towards Generic Hearing Abilities for Large Language Models.](../SpokenDialogue/2023.10.20_SALMONN.md) ICLR2024.
 [^scaling_interleaving]: Scaling Speech-Text Pre-training with Synthetic Interleaved Data. ArXiv:2411.17607.
@@ -596,7 +626,7 @@ We hope that these insights, and open source resources will be of use to the res
 [^valle]: [**VALL-E**: Neural Codec Language Models Are Zero-Shot Text to Speech Synthesizers.](ST2S/2023.01.05_VALL-E.md) ArXiv:2301.02111.
 [^vp]:
 [^wang2021fairseq]:
-[^wang2024greats]:
+[^wang2024greats]: **GREATS**: Online Selection of High-Quality Data for LLM Training in Every Iteration.
 [^warner2024modernbert]: [**ModernBERT**: Smarter, Better, Faster, Longer: A Modern Bidirectional Encoder for Fast, Memory Efficient, and Long Context Finetuning and Inference](../TextLM/2024.12.18_ModernBERT.md) ArXiv:2412.13663.
 [^weber2024redpajama]:
 [^xie2024mini]:
